--- a/index.html
+++ b/index.html
@@ -5,29 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dodawanie elementów</title>
     <style>
-        body { background-color: rgb(149, 119, 231); }
+        body { background-color: rgb(149, 119, 231); margin: 0; }
+        .container {
+            position: absolute;
+            top: 20%; 
+            left: 50%;
+            transform: translate(-50%, -20%);
+            text-align: center;
+        }
+        .form-wrapper {
+            border: 2px solid black; 
+            padding: 20px;
+            border-radius: 8px;
+            background-color: white;
+            display: inline-block;
+        }
         h1 { color: rgb(94, 69, 184); }
         button { background-color: rgb(172, 135, 196); padding: 5px; cursor: pointer; }
         button:hover { background-color: rgb(51, 37, 68); }
         .message-container { display: flex; align-items: center; margin-top: 5px; padding: 12px; border-radius: 5px; gap: 10px; }
-        .message-container p { font-size: 18px; font-weight: bold; } /* Powiększona czcionka */
+        .message-container p { font-size: 18px; font-weight: bold; }
         .error-message { color: red; font-weight: bold; }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Dodawanie elementów</h1>
-        <form>
-            <label>Imię:</label><input id="name" type="text"><span id="nameError" class="error-message"></span><br><br>
-            <label>Nazwisko:</label><input id="surname" type="text"><span id="surnameError" class="error-message"></span><br><br>
-            <label>Pełnoletność:</label><input id="adult" type="checkbox"><br><br>
-            <label>Kolor czcionki:</label><input id="color" type="color"><br><br>
-            <label>Kolor tła:</label><input id="background" type="color"><br><br>
-            <input id="noBackground" type="checkbox"> Brak tła<br><br>
-            <button type="button" id="addElement">Dodaj element</button>
-            <button type="button" id="clearAll">Wyczyść wszystko</button>
-        </form>
-        <div id="messageContainer"></div>
+        <div class="form-wrapper">
+            <h1>Dodawanie elementów</h1>
+            <form>
+                <label>Imię:</label><input id="name" type="text"><span id="nameError" class="error-message"></span><br><br>
+                <label>Nazwisko:</label><input id="surname" type="text"><span id="surnameError" class="error-message"></span><br><br>
+                <label>Pełnoletność:</label><input id="adult" type="checkbox"><br><br>
+                <label>Kolor czcionki:</label><input id="color" type="color"><br><br>
+                <label>Kolor tła:</label><input id="background" type="color"><br><br>
+                <input id="noBackground" type="checkbox"> Brak tła<br><br>
+                <button type="button" id="addElement">Dodaj element</button>
+                <button type="button" id="clearAll">Wyczyść wszystko</button>
+            </form>
+            <div id="messageContainer"></div>
+        </div>
     </div>
 
     <script>
@@ -86,4 +102,3 @@
     </script>
 </body>
 </html>
-
